# proofbench

./: .dockerignore  .env.example  .gitignore  BACKEND_COMPLETE.md  CHANGELOG.md  CODE_QUALITY_IMPROVEMENTS.md  COMPLETION_REPORT.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  FINAL_REPORT.md  GITHUB_STRATEGY.md  LLM_ADAPTER_STATUS.md  LLM_INTEGRATION_COMPLETE.md  MANIFEST.in  Makefile  PRE_LAUNCH_CHECKLIST.md  QUALITY_AUDIT_COMPLETE.md  QUICK_START.md  README.md  README_BACKEND.md  RELEASE_NOTES_v3.7.2.md  START_HERE.md  docker-compose.yml  index.html  nginx.conf  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.py  start-backend.bat  test.html  tsconfig.json  vite.config.ts  vitest.config.ts
.github/: dependabot.yml
.github/workflows/: ci-cd.yml  ci.yml  docker-publish.yml  pypi-publish.yml  release.yml
.storybook/: preview.tsx
backend/: .env.example  BACKEND_IMPLEMENTATION_PROGRESS.md  README.md  TESTING.md  main.py
backend/scripts/: smoke_test.py
backend/tests/: conftest.py  test_api_endpoints.py  test_config.py  test_crud_proof.py  test_symbolic_verifier.py  test_verification_service.py
scripts/: capture_screenshots.py  deploy.sh
src/: main.tsx
src/ai/: consensus_manager.ts
src/api/: client.ts  hooks.ts  types.ts
src/core/: error_codes.ts  feedback_generator.ts  hybrid_engine.ts  justification_analyzer.ts  proof_engine.ts  semantic_evaluator.ts  symbolic_verifier.ts
src/design-system/: index.ts
src/metrics/: lii_engine.ts
src/pages/: ExecutionHistory.tsx  HybridDashboard.tsx  HybridDashboardM3.tsx  ProofInputReview.tsx  Settings.tsx
src/ui/: FeedbackPanel.tsx  JustificationView.tsx  StepResultsPanel.tsx
src/utils/: sanitize.ts
storybook/: iframe.html  index.json  project.json
storybook/assets/: Alert.stories-Bf_PV0JR.js  Alert.stories-DfyJhy_Z.js  Button-BpEiAWrF.js  Button-BqsJoXRS.js  Button.stories-BiStWrIc.js  Button.stories-CTPhL1FS.js  Button.stories-Cp-nE0In.js  Button.stories-yxjkb-ee.js  Color-AVL7NMMY-DV6bxrHs.js  Color-AVL7NMMY-o_I8f01L.js  Configure-CH9-4cn3.js  Configure-trzTKKLv.js  DocsRenderer-PQXLIZUC-BIkLOHLr.js  DocsRenderer-PQXLIZUC-CBesSgti.js  ExecutionHistory.stories-C0aipRYl.js  ExecutionHistory.stories-XAUc8XYu.js  FormField-Df57juGd.js  FormField-Vzb2xDgJ.js  FormField.stories-BXeSfqeY.js  FormField.stories-DevxfMq1.js  Header-CH2ENRGN.js  Header-D_MW_tB-.js  Header.stories-B0Y2lW7B.js  Header.stories-CWUtgzsn.js  ModalDrawer.stories-DGaBlYaE.js  (+25 more)
(+45 files in other folders)
